--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,8 @@ python = "^3.8"
 pytest = "^6.0.1"
 pytest-cov = "^2.10.1"
 bump2version = "^1.0.0"
-mypy = "^0.782"
+mypy = "^0.812"
+pytest-asyncio = "^0.14.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
